# sample_project

./: .gitignore  README.md  pyproject.toml
projectdev/ai/: urls.py  views.py
projectdev/ai/templates/ai/: index.html
projectdev/projectdev/: asgi.py  settings.py  urls.py  wsgi.py
