[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "omnix"
version = "0.0.0.dev0"
requires-python = ">=3.12, <3.13"
description = "projectdev"
license = "Apache-2.0"

authors = [
    { name = "Xuan‑You Lin", email = "a0985821880@gmail.com" }
]

dependencies = [
    "django>=5.2.8",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
dev = [
    { include-group = "test" },
    "ipykernel",
    "ipywidgets",
    "nest_asyncio",
    "jupyterlab_widgets",
]

[tool.hatch.build.targets.wheel]
packages = ["projectdev/"]